# spatialhub

./: .gitignore  README.md  pyproject.toml
src/spatialhub/: __init__.py  _imageio.py  structures.py
src/spatialhub/models/: __init__.py
src/spatialhub/models/efficient_loftr/: .gitignore  .md  README.md  __init__.py  adapter.py  export_onnx.py  inference.py  pyproject.toml  requirements.txt
src/spatialhub/models/efficient_loftr/src/loftr/: loftr.py
src/spatialhub/models/efficient_loftr/src/loftr/loftr_module/: fine_preprocess.py  linear_attention.py  transformer.py
src/spatialhub/models/efficient_loftr/src/loftr/utils/: coarse_matching.py  fine_matching.py
src/spatialhub/utils/: __init__.py  viz.py
