[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatialhub"
version = "0.1.0"
description = "A lightweight, PyTorch-free spatial computing and feature matching library."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Pankaj Kaushik" }
]
dependencies = [
    "huggingface-hub>=1.22.0",
    "numpy>=2.5.1",
    "onnxruntime>=1.27.0",
    "opencv-python-headless>=5.0.0.93",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.19.2"]
dev = ["pytest>=9.1.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/spatialhub"]
